[gd_scene load_steps=8 format=3 uid="uid://dk4igaxebwksc"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_uqaol"]
[ext_resource type="PackedScene" uid="uid://btwyhfddutk1q" path="res://scenes/scrolling_bg/scrolling_bg.tscn" id="3_3hyst"]
[ext_resource type="PackedScene" uid="uid://c4h73fddkm4cy" path="res://scenes/bat_cb/bat_cb.tscn" id="3_dayjw"]
[ext_resource type="PackedScene" uid="uid://bexua0xclge16" path="res://scenes/game_over/game_over.tscn" id="6_kejfr"]
[ext_resource type="PackedScene" uid="uid://c5rglt2gthwj2" path="res://scenes/hud/hud.tscn" id="7_hu4tm"]
[ext_resource type="AudioStream" uid="uid://c8xqes3ynpj70" path="res://assets/audio/game_over.wav" id="8_520fq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5go33"]
size = Vector2(747, 134.5)

[node name="Game" type="Node2D"]
script = ExtResource("1_uqaol")

[node name="ScrollingBG" parent="." instance=ExtResource("3_3hyst")]

[node name="PlaneCB" parent="." instance=ExtResource("3_dayjw")]
z_index = 1
position = Vector2(164, 486)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 811)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(249, 438)
shape = SubResource("RectangleShape2D_5go33")

[node name="PipesHolder" type="Node" parent="."]

[node name="SpawnL" type="Marker2D" parent="."]
position = Vector2(580, 526)

[node name="SpawnU" type="Marker2D" parent="."]
position = Vector2(577, 352)

[node name="PipesSpawnTimer" type="Timer" parent="."]
wait_time = 1.35
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("6_kejfr")]
visible = false

[node name="Hud" parent="CanvasLayer" instance=ExtResource("7_hu4tm")]
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_520fq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(239, 426)
zoom = Vector2(1.5, 1.5)

[node name="FlamesSpawnTimer" type="Timer" parent="."]
wait_time = 1.35
autostart = true

[node name="FlamesHolder" type="Node" parent="."]

[connection signal="timeout" from="PipesSpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="FlamesSpawnTimer" to="." method="_on_flames_spawn_timer_timeout"]
